# pyrusttest

./: .gitignore  Cargo.toml  pyproject.toml  pyvenv.cfg
PKG/: PKGBUILD
python/: prt
python/pyrusttest/: main.py
src/: lib.rs
